# pipx

./: Cargo.toml  changelog.md  readme.md  rustfmt.toml
.github/workflows/: benches.yml  ci.yml  coverage.yml  examples.yml  linting.yml  publish.yml  tests.yml
crates/pipx/: Cargo.toml  readme.md
crates/pipx-macros/: Cargo.toml  readme.md
crates/pipx-macros/src/: lib.rs
crates/pipx/benches/: async_middleware.rs  async_pipeline.rs  async_pipeline_transform.rs  async_transform.rs  pipeline.rs  pipeline_transform.rs  sync_middleware.rs  sync_transform.rs
crates/pipx/examples/: actix_web_adapter.rs  async_jobs.rs  axum_adapter.rs  basic.rs  basic_transform.rs  data_validation.rs  gpu_wgpu_pipeline.rs  middleware_auth.rs
crates/pipx/src/: lib.rs  macros.rs  pipe.rs  pipeline.rs  types.rs  utility.rs
crates/pipx/src/pipe/: async_next.rs  async_pipe.rs  mod.rs  next.rs  pipe.rs
crates/pipx/src/pipeline/: async_pipeline.rs  middleware.rs  mod.rs  pipeline.rs  transform.rs
crates/pipx/tests/: async_pipeline.rs  macro_attributes.rs  middleware_pipeline.rs  pipeline.rs  pipeline_stress.rs  sync_middleware_comprehensive.rs  sync_pipeline_comprehensive.rs  sync_transform_comprehensive.rs  taps_feature.rs
crates/rustpipe/: Cargo.toml
crates/rustpipe-macros/: Cargo.toml
crates/rustpipe-macros/src/: lib.rs
crates/rustpipe/src/: async_pipeline.rs  error.rs  lib.rs  pipeline.rs  types.rs  utility.rs
examples/: async.rs  basic.rs
src/: lib.rs  pipeline.rs
