# Workspace settings
[workspace]
# Crates included in this workspace
members = ["crates/pipx", "crates/pipx-macros"]
# Use the latest cargo resolver for dependency resolution
resolver = "3"

# Shared package settings
[workspace.package]
# Rust edition (modern syntax and features)
edition = "2024"
# Keywords to improve discoverability on crates.io
keywords = ["pipeline", "pipe", "rust", "pipx"]
# Author information
authors = ["Selçuk Çukur <hello@selcukcukur.me>"]
# License identifier (SPDX format)
license = "MIT"
# Current crate version (Semantic versioning)
version = "0.1.0"

# Documentation URL (reference published on docs.rs)
documentation = "https://docs.rs/pipx"
# Crates.io categories (used for classification and discoverability)
categories = ["rust-patterns", "data-structures", "asynchronous", "value-formatting"]
# Repository URL (source code and issue tracker)
repository = "https://github.com/selcukcukur/pipx"

# Shared dependencies
[workspace.dependencies]
# Core framework for serialization and deserialization
serde = { version = "1", features = ["derive"] }
# Json backend for serde, used for structured data and logging
serde_json = "1"
# Lightweight error handling library for custom error types
thiserror = "2"

# Development profile
[profile.dev]
debug = true
codegen-units = 256
lto = "off"
panic = "unwind"
opt-level = 0

# Release profile
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
