# Package configurations
[package]
name = "pipx-macros"
description = "Proc macros for pipx middleware and transform pipes."
keywords.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

categories.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "readme.md"

[dependencies]
syn = { version = "2.0.117", features = ["full"]}
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
