# Package configuration
[package]
    # Package identity
    name = "pipx-macros"
    version.workspace = true
    edition.workspace = true

    # Package metadata
    description = "Procedural macros for reducing boilerplate when implementing pipelines with pipx."
    keywords.workspace = true
    categories.workspace = true

    # Package authorship and licensing
    authors.workspace = true
    license.workspace = true

    # Package resources
    documentation.workspace = true
    repository.workspace = true
    readme = "readme.md"

# Dependency configuration
[dependencies]
    # syn - Rust syntax tree parsing for procedural macro generation
    syn = { version = "2.0.117", features = ["full"] }

    # quote - Rust token generation for procedural macro expansion
    quote = "1"

# Library configuration
[lib]
    # Library name exposed to dependent crates
    name = "pipx_macros"

    # Enables procedural macro generation for attribute and derive macros
    proc-macro = true